tests/baselines/reference/AnnotationDeclarationNegative14.errors.txt
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative14.ets(2,5): error TS2349: This expression is not callable.
  Type 'Number' has no call signatures.
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative14.ets(2,5): error TS28018: Unexpected token. An annotation property was expected.
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative14.ets(3,5): error TS2349: This expression is not callable.
  Type 'String' has no call signatures.
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative14.ets(3,11): error TS1005: ';' expected.
tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative14.ets(4,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/parser/ets/annotations/AnnotationDeclarationNegative14.ets (5 errors) ====
    @interface Anno {
        0();
        ~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'Number' has no call signatures.
        ~
!!! error TS28018: Unexpected token. An annotation property was expected.
        "0"() { }
        ~~~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'String' has no call signatures.
              ~
!!! error TS1005: ';' expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.